2 files modified, 4 deleted

--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -4,5 +4,5 @@
   type="number"
   [(ngModel)]="userId"
   />
-  <button (onClick)="sendLoadAction(userId)">Load</button>
+  <button (click)="sendLoadAction(userId)">Load</button>
 </div>
