--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <hello name="{{ name }}"></hello>
+<p>Enter Userid to fire a load user action</p>
 <app-user-detail></app-user-detail>
-<pre>ausgabe</pre>
